5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1637_2445.log
== TEST (2019-04-09 11:45:46) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")
if (b.upper()== "C")
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)
print(eq)
-- ERROR:
File "XXXX", line 3
    if (b.upper()== "C")
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:45:57) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")
if (b.upper() == "C")
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)
print(eq)
-- ERROR:
File "XXXX", line 3
    if (b.upper() == "C")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:32) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala? (C/F)")

if (b.upper() == "C")
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)
print(eq)
-- ERROR:
File "XXXX", line 4
    if (b.upper() == "C")
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:47:39) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)
print(eq)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:48:23) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)
print(round(eq,2)
-- ERROR:
File "XXXX", line 9
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:48:29) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

	print(round(eq,2)
-- ERROR:
File "XXXX", line 10
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:48:38) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

	print(round(eq,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:48:53) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:07) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- EXECUTION TIME:
0.204396
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2445/main.py", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:49:19) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:49:37) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- EXECUTION TIME:
0.193028
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2445/main.py", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:49:52) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:50:09) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- EXECUTION TIME:
0.185118
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1637/2445/main.py", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:51:02) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:19:20) 
-- CODE:
a = float(input("Valor da temperatura:"))
b = input("Qual escala?")

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:20:09) 
-- CODE:
b = input("qual escala?")
a = float(input("Valor da temperatura:"))

if (b.upper() == "C"):
	eq = a*(5/9) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- OUTPUT:
209.78
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 20:22:46) 
-- CODE:
b = input("qual escala?")
a = float(input("Valor da temperatura:"))

if (b.upper() == "C"):
	eq = a*(9/5) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 20:23:30) 
-- CODE:
b = input("qual escala?")
a = float(input("Valor da temperatura:"))

if (b.upper() == "C"):
	eq = a*(9/5) + 32
else:
	eq = (a - 32)*(5/9)

print(round(eq,2))
-- EXECUTION TIME:
0.152898
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
